fix dots bg on mobile height on timerview

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -128,7 +128,7 @@ button:focus {
 }
 .loader {
   overflow: auto;
-  height: calc(100% - 90px);
+  height: calc(100% - 42px);
   width: 100%;
   position: absolute;
   display: table;
